# nc_tg_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.build.yaml  docker-compose.yaml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml  FEATURE_REQUEST.yaml  config.yaml
.github/workflows/: codeql.yaml  docker-image.yaml  linters.yaml
bot/: __main__.py
bot/core/: __init__.py  config.py  loaders.py  runners.py
bot/db/: __init__.py  database.py  uow.py
bot/db/models/: __init__.py  base.py  user.py
bot/db/repositories/: __init__.py  _abstract.py  _user.py
bot/filters/: __init__.py  authorization_filter.py  authorization_filters.py  from_user_filter.py  localized_text_filter.py  msg_author_filter.py  only_private_filter.py
bot/handlers/: __init__.py  _core.py
bot/handlers/auth/: __init__.py  auth.py
bot/handlers/default/: __init__.py  default.py  start.py
bot/handlers/menu/: __init__.py  logout.py
bot/handlers/menu/files/: __init__.py  back.py  cancel.py  delete.py  download.py  menu.py  mkdir.py  pag.py  select.py  upload.py
bot/handlers/menu/fsnode/: __init__.py  back.py  cancel.py  delete.py  download.py  menu.py  mkdir.py  new.py  pag.py  select.py  upload.py
bot/handlers/menu/search/: __init__.py  pag.py  search.py  select.py
bot/handlers/menu/trashbin/: __init__.py  cancel.py  cleanup.py  fsnode.py  menu.py  pag.py
bot/keyboards/: __init__.py  _files_board_abstract.py  _fsnode_board_abstract.py  files_menu_boards.py  fsnode_board_abstract.py  fsnode_boards.py  logout_board.py  menu_board.py  reply_board.py  reply_boards.py  search_board.py  trashbin_boards.py
bot/keyboards/callback_data_factories/: __init__.py  files_data.py  fsnode_data.py  logout_data.py  search_data.py  trashbin_data.py
bot/language/: __init__.py  translator.py
bot/language/locales/: ru.ftl
bot/locales/en/: auth.ftl  deafult.ftl  fsnode.ftl  search.ftl  service.ftl  trashbin.ftl
bot/locales/ru/: auth.ftl  deafult.ftl  fsnode.ftl  search.ftl  service.ftl  trashbin.ftl
bot/middlewares/: __init__.py  database_md.py  i18n.py  nextcloud_md.py  query_msg_md.py  translator_md.py  unitofwork_md.py
bot/nextcloud/: __init__.py  _base.py  exceptions.py  factory.py  file_manager.py  fsnode.py  search.py  trashbin.py
bot/states/: __init__.py  files_state.py  fsnode_menu.py  search.py
bot/utils/: __init__.py  mime_symbols.py
bot/utils/nextcloud/: file_manager.py
example/: README.md  docker-compose.yaml
migrations/: env.py
migrations/versions/: 2024-05-28_init.py
scripts/: docker-entrypoint.sh
