[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
package-mode = false
name = "nc-tg-bot"
version = "0.1.0"
description = ""
authors = [
  "blvd <blvd@bagoont.ru>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.8.0"
redis = "^5.0.7"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
uvloop = "^0.19.0"
aiogram-i18n = "^1.4"
fluent-runtime = "^0.4.0"
nc-py-api = { git = "https://github.com/cloud-py-api/nc_py_api.git" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
mypy = "^1.10.1"
ruff = "^0.5.0"
pre-commit = "^3.7.1"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  "logs",
  "migrations",
]
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101",
  "ANN102",
  "ANN401",
  "D105",
  "D107",
  "D203",
  "D213",
  "D401",
  "RUF100",
  "TD003",
]
lint.extend-per-file-ignores."tests/*.py" = [
  "ANN401",
  "S101",
  "S311",
]
lint.isort.known-local-folder = [
  "bot",
]
lint.isort.no-lines-before = [
  "future",
  "standard-library",
]
lint.pylint.max-args = 10

[tool.mypy]
python_version = "3.12"
files = "bot/*.py"
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin",
]
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
pretty = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[[tool.mypy.overrides]]
module = [
  "asyncpg.*",
  "nc_py_api.*",
]
ignore_missing_imports = true
